# Gogaman

./: .gitignore  CMakeLists.txt  Gogaman.sln  README.md  hq
Gogaman/: CMakeLists.txt  Gogaman.vcxproj  Gogaman.vcxproj.filters
Gogaman/Shaders/: compileShaders.bat  frag.spv  test.frag  test.txt  test.vert  vert.spv
Gogaman/Shaders/Mandelbrot/: compileShaders.bat  flexFragTest.txt  mandelbrot.frag  p_Mandelbrot.spv  p_Postprocess.spv  postprocess.frag  postprocess.vert  test.frag  v_Mandelbrot.spv  v_Postprocess.spv
Gogaman/Shaders/Mandelbulb/: mandelbrot.frag  p_Mandelbrot.spv  p_Postprocess.spv  postprocess.frag
Gogaman/shaders/: coc.fs  directPBR.fs  downsampleDepth.fs  gbuffershader.fs  gbuffershader.vs  lampshader.fs  lampshader.vs  postprocess.fs  skyboxshader.fs  ssr.fs  voxelClearDynamic.compute  voxelConeTracing2.fs  voxelInjectIndirect.compute  voxelization.fs  voxelization.vs
Gogaman/src/: Gogaman.h  pch.h
Gogaman/src/Gogaman/: AbstractWindow.h  Application.cpp  Application.h  Base.h  BoundingVolumeComponent.h  BoundingVolumeSystem.h  CRTP.h  Config.h  Container.h  EntryPoint.h  Input.h  Resource.h  ResourceCache.h  ResourceManager.cpp  ResourceManager.h  SpatialComponent.h  StableArray.h  TypeDefs.h  Window.h
Gogaman/src/Gogaman/Containers/: Freelist.h
Gogaman/src/Gogaman/Core/: AbstractTime.h  AbstractWindow.h  Application.cpp  Application.h  Base.h  CRTP.h  Config.h  ResourceContainer.h  Time.h  Window.h
Gogaman/src/Gogaman/ECS/: Component.h  ComponentFlags.h  ComponentManager.h  Entity.h  EntityGroup.h  EntityManager.h  RenderSystem.cpp  RenderSystem.h  RenderableComponent.h  SpatialComponent.h  System.cpp  System.h  World.cpp  World.h
Gogaman/src/Gogaman/Events/: Event.h  EventDispatcher.h  EventListener.h  EventManager.cpp  EventManager.h  EventQueue.cpp  EventQueue.h  KeyboardEvent.h  MouseEvent.h  (+1 more)
Gogaman/src/Shaders/: bloom.fs  bloom.vs  circularBlurHorizontal.fs  circularBlurHorizontal.vs  circularBlurVertical.fs  directPBR.fs  lampshader.fs  postprocess.vs  precomputeBRDF.fs
(+447 files in other folders)
